2013-05-28 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinysearch.el (tinysearch-install-default-keybindings): Check
	Mouse bindings before insall.

2013-05-22 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-bug-number-pure-p): New.
	(tinydebian-debian-bug-info-macro): Use
	`tinydebian-bts-bug-number-pure-p'.
	(tinydebian-debian-parse-bts-bug-info-raw): Adjust to 80 col.
	(tinydebian-debian-parse-bts-bug-message): New.
	(tinydebian-debian-parse-bts-bug-info-raw): Add MESSAGE
	by using `tinydebian-debian-parse-bts-bug-message'.
	(tinydebian-debian-bug-info-message-content-insert): New.

2013-05-04 Sat  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el: Adjust comment for RoQA.

2012-10-18 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylib.el (ti::advice-control): Correct docstring.

2012-07-11 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-nbr-at-current-point-number): Replace
	`current-word' with direct read; the numbers matched.

2012-06-29 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinytab.el (tinyyab-mode): Do not bind C-c C-m.
	message-mode uses key prefix for PGP commands.

2012-05-14 Mon  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-mode-debian-address-bug-toggle):
	With prefix-arg, set initial input to bug number for editing.

2012-05-14 Tue  Jari Aalto  <jari.aalto@cante.net>

	* other/folding.el (folding-shift-in): Correct
	`folding-narrow-by-default' at the end to enabel shift-in
	effect. Thanks to PD Priyadarshan <peedsmail@gmail.com>
	for bug reported and debugging. Fix implemented as in
	<https://gist.github.com/1571162> by doitian (Ian Yang)
	<me@iany.me>.

2012-04-22 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-type-its): New.

2012-04-20 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-nbr-string): Impove.

2012-04-19 Thu  Jari Aalto  <jari.aalto@cante.net>
